@@ -1,5 +1,6 @@
 Changes for 1.8.6rc2
 
+ - [ZBX-3990] fixed exiting proxy and server on cache reload using runtime control options (rudolfs)
  - [ZBX-3835] fixed possible security vulnerability in redirects (Vedmak)
 
 Changes for 1.8.6rc1
